# webvplayer

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
front/: build.js  package-lock.json  package.json
front/local/: config.html  config.js
front/public/: index.html  index.js
front/scripts/: gen_icons.js
front/src/: app.css  app.js  config.js  explorer.js  explorer.jsx  icons.jsx  index.html  index.jsx  player.js  player.jsx
front/src/icons/: icons.jsx
rest/: .clang-format  CMakeLists.txt
rest/conf/: webvplayer-default.json
rest/include/webvplayer/: enum_class_reflection.hpp  mpv_video_player.hpp  name_format.hpp  playback_history.hpp  resource.hpp  video_player.hpp  webplayer_exceptions.hpp  webvplayer.hpp
rest/src/: CMakeLists.txt  mpv_video_player.cpp  playback_history.cpp  resource.cpp  webvplayer.cpp
